# finance-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AUDIT_REPORT.md  CLAUDE.md  CODEX_REVIEW.md  DEPLOY.md  Dockerfile  Finance_Bot_Architecture_v2.md  GEMINI.md  IMPLEMENTATION_PLAN.md  Procfile  demo_visuals.py  docker-compose.yml  plan.md  pyproject.toml
alembic/: env.py
api/: browser_connect.py  browser_extension.py  main.py  miniapp.py  oauth.py  webapp_auth.py
browser-extension/: background.js  manifest.json  popup.html  popup.js
config/: skill_catalog.yaml
demo_remotion/: package.json  render-all.js
docs/: MEMORY_SYSTEM_GAP_ANALYSIS.md  PROJECT_CAPABILITIES.md  degradation-policy.md  feature_qa_plan.md  generate_program_fixes.md  graceful-degradation.md  testing-checklist-multilingual.md  testing-checklist-ru.md
plans/: locale-timezone-phase3-5.md
scripts/: backfill_locale_timezone_v2.py  booking_result.json  compare_llm_chat.py  compare_tool_calling.py  entrypoint.sh  export_golden_dialogues.py  fix_manas_data.py  fix_samat_categories.py  generate_release_checklist.py  launch_relay_chrome_setup.py  migrate_inline_docs.py  preflight_release_ops.py  run_release_ops_cycle.py  run_weekly_review_cycle.py  search_result.json  start_controlled_canary.py  telegram_auth.py  test_bot_live.py  test_browser_login.py  test_invoice_preview.py  test_memory_gaps.py  test_playwright_booking.py  test_reminders_live.py  voice_pilot_readiness.py
static/: demo.html  hero-bg.webm  index.html  privacy.html  script.js  style.css  terms.html
tests/: conftest.py  test_undo.py  (+8 more)
(+895 files in other folders)
